--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,13 +4,14 @@ spring:
       host: localhost
       port: 27017
       database : testdb
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
+
 
 logging:
   level:
-    org:
-      springframework:
-        data:
-          mongodb:
-            core:
-              MongoTemplate=DEBUG:
+    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
 
